# CMake-dll-lib

./: CMakeLists.txt
LibrarieStatica/: CMakeLists.txt
LibrarieStatica/include/: CMakeLists.txt  mymath.h
LibrarieStatica/src/: CMakeLists.txt  math.cpp
proj/: CMakeLists.txt
proj/src/: CMakeLists.txt  main.cpp
